Correcting `--iui-color-border-foreground` value in light high contrast theme.

--- a/packages/itwinui-variables/src/themes/light-hc.scss
+++ b/packages/itwinui-variables/src/themes/light-hc.scss
@@ -112,7 +112,7 @@ $opacities: (
   // #region Border variables
   --iui-color-border-subtle: #{hex($bg-700)};
   --iui-color-border: #{hex($bg-900)};
-  --iui-color-border-foreground: #{hex($fg-700)};
+  --iui-color-border-foreground: #{hex($fg-800)};
   --iui-color-border-foreground-hover: #{hex($fg-600)};
   --iui-color-border-disabled: #{hex($bg-700)};
   --iui-color-border-accent: var(--iui-color-border-informational);
